<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="devide">/</string>
    <string name="multiply">*</string>
    <string name="equal">=</string>
    <string name="number_1">number 1</string>
    <string name="operand">operand</string>
    <string name="number_2">number 2</string>
    <string name="c">c</string>
    <string name="dot">.</string>
    <string name="username">USERNAME</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="by_naresh">BY NARESH</string>


    <string name="second_numberins">Please insert Second number</string>
    <string name="first_numberins">\"Please insert first number \"</string>
    <string name="title_activity_maps">Map</string>
    <string name="back"><![CDATA[<]]></string>
</resources>